<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".RegistrationActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           style="@style/Layout">

        <EditText
                android:id="@+id/reg_name"
                style="@style/EditText"
                android:inputType="textPersonName"
                android:hint="@string/name"/>


        <EditText
                android:id="@+id/reg_surname"
                style="@style/EditText"
                android:inputType="textPersonName"
                android:hint="@string/surn"/>

        <EditText
                android:id="@+id/reg_password"
                style="@style/EditText"
                android:inputType="textPassword"
                android:hint="@string/pass"/>

         <EditText
                android:id="@+id/reg_email"
                style="@style/EditText"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>



        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <Button
                    android:id="@+id/signUp"
                    android:onClick="signUp"
                    android:layout_weight="1"
                    style="@style/Button"
                    android:text="@string/registration"/>
            <Button
                    android:id="@+id/back"
                    android:onClick="back"
                    android:layout_weight="1"
                    style="@style/Button"
                    android:text="@string/back"/>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>