<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".Add">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Layout"
            tools:layout_editor_absoluteY="523dp"
            tools:layout_editor_absoluteX="353dp">

        <EditText
            android:id="@+id/toDoTitle"
            style="@style/EditText"
            android:inputType="text"
            android:hint="@string/title"/>


        <EditText
                android:id="@+id/content"
                style="@style/TextArea"
                android:inputType="text"
                android:hint="@string/content"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <Button
                    android:id="@+id/signUp"
                    android:onClick="goToHome"
                    android:layout_weight="1"
                    style="@style/Button"
                    android:text="@string/back"/>
            <Button
                    android:id="@+id/back"
                    android:onClick="save"
                    android:layout_weight="1"
                    style="@style/Button"
                    android:text="@string/save"/>

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>