<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">

   <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
            style="@style/Layout">



    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_marginTop="@dimen/marginTop10">
        <EditText
                android:id="@+id/login_email"
                style="@style/EditText"
                android:inputType="textPersonName"
                android:hint="@string/email" />

       <EditText
               android:id="@+id/login_pass"
               style="@style/EditText"
               android:inputType="textPassword"
               android:hint="@string/pass"/>
    </LinearLayout>

       <LinearLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
            <Button
                 android:id="@+id/signIn"
                 android:onClick="signIn"
                 style="@style/Button"
                 android:layout_weight="1"
                 android:text="@string/signIn"/>
            <Button
                   android:id="@+id/SignUp"
                   android:onClick="signUp"
                   android:layout_weight="1"
                    style="@style/Button"
                   android:text="@string/signUp"/>

       </LinearLayout>

   </LinearLayout>



</android.support.constraint.ConstraintLayout>